infrastructures/kubernetes/src/test/resources/devfile/petclinic.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Pod
  metadata:
    name: petclinic
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    containers:
    - name: server
      image: mariolet/petclinic
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          memory: 512Mi
- apiVersion: v1
  kind: Pod
  metadata:
    name: mysql
    labels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
  spec:
    containers:
    - name: mysql
      image: centos/mysql-57-centos7
      ports:
      - containerPort: 3306
        protocol: TCP
      resources:
        limits:
          memory: 512Mi
- apiVersion: v1
  kind: Pod
  metadata:
    name: withoutLabels
  spec:
      containers:
      - name: server
        image: test/petclinic
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
- kind: Service
  apiVersion: v1
  metadata:
    name: mysql
    labels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
  spec:
    ports:
      - name: mysql
        port: 3306
        targetPort: 3360
    selector:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
- kind: Service
  apiVersion: v1
  metadata:
    name: petclinic
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    ports:
      - name: web
        port: 8080
        targetPort: 8080
    selector:
      app: petclinic
      component: webapp
- kind: Route
  apiVersion: v1
  metadata:
    name: petclinic
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    to:
      kind: Service
      name: petclinic
    port:
      targetPort: web
